# GraphRecall

./: .cursorrules  .gitignore  Graph Recall Architecture.md  PLAN.md  README.md  agent_stream.md  alembic.ini  apply_migration.py  dev.sh  diagnose.sh  example_note.md  langgraph.json  pyproject.toml  render.yaml  requirements.txt  run_test.sh  vercel.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
Context/: GraphRecall_2Day_MVP_Guide.md  GraphRecall_Complete_Context.md  LangGraph Architecture - Active Recall.md  Langgraph_Audit.md  langgraph-modernization.md
app/: package-lock.json
backend/: __init__.py  main.py  package-lock.json  package.json
docs/: INTERVIEW_GUIDE.md  SYSTEM_ARCHITECTURE_GUIDE.md  how_to_use.md
frontend/: index.html  next.config.ts  package-lock.json  package.json
notebooks/: book_ingestion_colab.ipynb  direct_upload_ingest.ipynb  pdf_ocr_colab.ipynb
sample_content/: DeepLearning.md  machine_learning.txt  photosynthesis.txt
sample_data/: graph_algorithms.md  system_design_sharding.md  transformers.md
scripts/: apply_migration.py  apply_migrations.py  backfill_concept_confidence.py  backfill_user_ids.py  check_cols_sync.py  check_duplicates.py  check_neo4j_uids.py  debug_feed_response.py  ingest_book.py  pdf_ocr.py  reset_all_data.py  reset_data_keep_latest.py  reset_data_keep_users.py  run_frontend.sh  run_seed.sh  seed_data.py  verify_feed_logic.py  verify_neo4j_connection.py  verify_persistence.py  verify_relationships.py  verify_remediation.py  verify_serialization.py
tests/: test_chunker_logic.py  test_retrieval.py
(+167 files in other folders)
